psp-migration-mpol/add-capabilities/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-capabilities-partial-images
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-capabilities
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.namespace == 'add-capabilities' && object.metadata.name == 'pod03'
