psp-migration-mpol/add-capabilities/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: add-capabilities
spec:
  containers:
  - name: first
    image: exempt.example/first:1
  - name: middle
    image: mutate.example/middle:1
  - name: last
    image: exempt.example/last:1
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: pod01
  namespace: add-capabilities
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: somedummybusyboximage:1.1.0
  - name: nginx
    image: somedummynginximage:1.1.0
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: pod02
  namespace: add-capabilities
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: somedummybusyboximage:1.1.0
    securityContext:
      capabilities:
        add:
        - CAP_NET_RAW
  - name: nginx
    image: somedummynginximage:1.1.0
    securityContext:
      capabilities:
        drop:
        - CAP_NET_RAW
        - SETUID
