psp-migration-mpol/add-capabilities/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-capabilities
policies:
- ../add-capabilities.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Pod
  patchedResources: patchedResource1.yaml
  policy: add-capabilities
  resources:
  - pod01
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource2.yaml
  policy: add-capabilities
  resources:
  - pod02
  result: pass
  isMutatingPolicy: true
- kind: Pod
  policy: add-capabilities
  resources:
  - pod03
  result: skip
  isMutatingPolicy: true
